--- a/index.html
+++ b/index.html
@@ -36,27 +36,26 @@
                 <div id="hero">
                     <div id="heroleft">
                         <div id="elem">
-                            <h1>Honey Diku</h1>
-                            <h1>Honey Diku</h1>
-                            <h1>Honey Diku</h1>
-                            <h1>Honey Diku</h1>
-                            <h1>Honey Diku</h1>
+                            <h1>Gonna Buy</h1>
+                            <h1>Rolls Royce</h1>
+                            <h1>Bmw Lit</h1>
+                            <h1>Merce-des</h1>
                         </div>
-                        <div id="elem">
+                        <!-- <div id="elem">
                             <h1>Nanu shubi</h1>
                             <h1>Honey Diku</h1>
                             <h1>Honey Diku</h1>
                             <h1>Honey Diku</h1>
                             <h1>Honey Diku</h1>
-                        </div>
+                        </div> 
                         <div id="elem">
                             <h1>hum.</h1>
                             <h1>Honey Diku</h1>
                             <h1>Honey Diku</h1>
                             <h1>Honey Diku</h1>
                             <h1>Honey Diku</h1>
-                        </div>
-                        <button>Register Now</button>
+                        </div> -->
+                        <button>Buy Now</button>
                     </div>
                     <div id="heroright">
                         <p>Lorem ipsum dolor sit amet.</p>
@@ -78,7 +77,6 @@
 <!-- Scroll Trigger is needed for Scroll Effects -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
-Three.js is needed for 3d Effects
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
 
 <!-- ControlKit is needed for Debug Panel -->
