--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
 <script type="text/javascript" src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
 
-<script src="script.js"/>
+<script src="script.js"></script>
 </body>
 
 </html>
